started the translation module and fixed some bugs in other modules/general